fix(form): fix buttons misalignment in `inline` layout (#1442)

--- a/packages/form/src/style/index.less
+++ b/packages/form/src/style/index.less
@@ -110,15 +110,6 @@
     }
   }
 
-  &__checkbox-list {
-    display: block;
-    width: 100%;
-    @media (min-width: @mobile-min) {
-      .@{ant-prefix}-col {
-        margin-top: 8px;
-      }
-    }
-  }
   // upload
   .@{ant-prefix}-upload-select-picture-card i {
     color: #999;
@@ -184,6 +175,7 @@
       }
 
       &-btns {
+        display: inline-block;
         margin-right: 0;
       }
     }
